--- a/SellingMobileApp.Web/Views/MobilleApp/All.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/All.cshtml
@@ -27,7 +27,7 @@
                 <h4 class="card-title mt-1">@listing.Title</h4>
                 <p>
                     <strong>Цена:</strong> @listing.Price лв.<br />
-                    <strong>Дата на производство:</strong> @listing.ManufactureYear.ToString("dd.MM.yyyy")
+                    <strong>Дата на производство:</strong> @listing.ManufactureYear.ToString("dd.MM.yyyy'г.'")
                 </p>
             </div>
 
