--- a/SellingMobileApp.Web/Views/MobilleApp/Add.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Add.cshtml
@@ -83,7 +83,7 @@
 
     <div class="d-flex justify-content-between mt-4">
         <button type="submit" class="btn btn-success px-4 py-2" style="background-color: #28a745; border-color: #28a745;">Създай обява</button>
-        <a href="@Url.Action("All", "MobilleApp")" class="btn btn-outline-secondary px-4 py-2">Отказ</a>
+        <a href="@Url.Action("All", "Listings")" class="btn btn-outline-secondary px-4 py-2">Отказ</a>
     </div>
 </form>
 
