--- a/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
@@ -35,7 +35,7 @@
     </div>
 
     <div class="text-center mt-4">
-        <a href="@Url.Action("All", "MobilleApp")" class="btn btn-secondary btn-lg me-2">
+        <a href="@Url.Action("All", "Listings")" class="btn btn-secondary btn-lg me-2">
             &larr; Назад към всички обяви
         </a>
     </div>
