--- a/SellingMobileApp.Web/Views/MobilleApp/MyFavourite.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/MyFavourite.cshtml
@@ -40,7 +40,7 @@
 
                 <!-- Бутон за детайли -->
                 <div class="col-12 px-1">
-                    <a href="@Url.Action("Details", "MobilleApp", new { id = listing.Id })" class="btn btn-info btn-sm w-100 fw-bold rounded">Детайли</a>
+                    <a href="@Url.Action("Details", "Listings", new { id = listing.Id })" class="btn btn-info btn-sm w-100 fw-bold rounded">Детайли</a>
                 </div>
             </div>
         </div>
