--- a/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
+++ b/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="MobilleApp" asp-action="All">All Listings</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Listings" asp-action="All">All Listings</a>
                             </li>
                         }
 
