--- a/SellingMobileApp.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SellingMobileApp.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container mt-5">
-    <h1 class="text-center text-primary fw-bold mb-4">@ViewData["Title"]</h1>
+    <h1 class="text-center fw-bold mb-4" style="color: black;">@ViewData["Title"]</h1>
 
     <div class="row justify-content-center">
         <div class="col-md-6 col-lg-5">
