--- a/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
@@ -43,16 +43,18 @@
     <div class="mt-5">
         <h3>Отзиви</h3>
         <hr />
-        <div>
+        <div class="reviews">
             @if (Model.Reviews.Any())
             {
                 <ul class="list-group">
                     @foreach (var review in Model.Reviews)
                     {
-                        <li class="list-group-item">
-                            <strong>@review.UserName</strong>
-                            <span class="text-muted">(Рейтинг: @review.Rating)</span>
-                            <p>@review.Comment</p>
+                        <li class="list-group-item d-flex justify-content-between align-items-start">
+                            <div class="ms-2 me-auto">
+                                <div class="fw-bold">@review.UserName</div>
+                                <p>@review.Comment</p>
+                            </div>
+                            <span class="badge bg-primary rounded-pill">@review.Rating ★</span>
                         </li>
                     }
                 </ul>
@@ -63,6 +65,7 @@
             }
         </div>
     </div>
+
 
     @if (!string.IsNullOrEmpty(currentUserId))
     {
