--- a/SellingMobileApp.Web/Views/MobilleApp/Delete.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Delete.cshtml
@@ -5,7 +5,8 @@
 }
 
 <div class="container mt-5">
-    <h2 class="text-center text-danger">@ViewData["Title"]</h2>
+    <h2 class="text-center text-dark" style="font-family: 'Arial', sans-serif; font-weight: bold;">@ViewData["Title"]</h2>
+
     <hr />
     <p class="text-center fs-5">Сигурни ли сте, че искате да изтриете тази обява?</p>
 
