--- a/SellingMobileApp.Web/Views/MobilleApp/MyFavourite.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/MyFavourite.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Моите любими обяви";
 }
 
-<h2 class="text-center">@ViewData["Title"]</h2>
+<h2 class="text-center text-dark" style="font-family: 'Arial', sans-serif; font-weight: bold;">@ViewData["Title"]</h2>
+
 <hr />
 
 <div class="text-center row">
