--- a/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
+++ b/SellingMobileApp.Web/Views/MobilleApp/Details.cshtml
@@ -71,8 +71,8 @@
     {
         <div class="mt-4">
             <h4>Добавете отзив</h4>
-            <form asp-action="AddReview" asp-route-listingId="@ViewData["ListingId"]" method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <form asp-action="AddReview" asp-controller="MobilleApp" method="post">
+                <input type="hidden" name="listingId" value="@ViewData["ListingId"]" />                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="mb-3">
                     <label for="Rating" class="form-label">Рейтинг (1-5):</label>
                     <select id="Rating" name="Rating" class="form-select" required>
