--- a/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
+++ b/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Welcome</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
 
                         @if (User.Identity.IsAuthenticated)
@@ -40,10 +40,18 @@
                                     <i class="bi bi-heart-fill text-danger me-1"></i> Saved Listings
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="DeviceType" asp-action="Phones">Phones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="DeviceType" asp-action="Tablets">Tablets</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="DeviceType" asp-action="Accessories">Accessories</a>
+                            </li>
                         }
                     </ul>
 
-                    <!-- Линковете за "About Us" и "Contact" ще са тук, вдясно от останалите бутони -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.Action("AboutUs", "Listings")">About Us</a>
