--- a/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
+++ b/SellingMobileApp.Web/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="MobilleApp" asp-action="Add">Post Listing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark d-flex align-items-center" asp-area="" asp-controller="MobilleApp" asp-action="MyFavourite">
+                                <a class="nav-link text-dark d-flex align-items-center" asp-area="" asp-controller="MyFavourites" asp-action="MyFavourite">
                                     <i class="bi bi-heart-fill text-danger me-1"></i> Saved Listings
                                 </a>
                             </li>
